--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   permission_handler: ^11.3.1
   device_info_plus: ^10.1.2
   flutter_local_notifications: ^17.2.2
+  basic_utils: ^5.7.0
 
 dev_dependencies: 
   flutter_lints: ^4.0.0
